--- a/.github/workflows/build-develop-native.yml
+++ b/.github/workflows/build-develop-native.yml
@@ -16,7 +16,9 @@ jobs:
 
     steps:
       - name: checkout code
-        uses: actions/checkout@develop
+        uses: actions/checkout@v2
+        with:
+           ref: develop
       - name: Build native executable
         uses: maxday/quarkus-native-build-docker-action@1
         with:
