--- a/humanoid-profile/.gitignore
+++ b/humanoid-profile/.gitignore
@@ -253,4 +253,6 @@ tags
 # End of https://www.gitignore.io/api/vim,java,macos,maven,eclipse,intellij
 
 # CUSTOM
-lsp/
+lsp
+.idea
+rest-profile.iml
