--- a/humanoid-profile/pom.xml
+++ b/humanoid-profile/pom.xml
@@ -71,6 +71,7 @@
         </dependency>
     </dependencies>
     <build>
+        <finalName>humanoid-profile</finalName>
         <plugins>
             <plugin>
                 <groupId>io.quarkus</groupId>
